# hybrid_trie

./: CMakeLists.txt  README.md  build.sh  words_alpha.txt
autotyper/: autotyper.c
include/: constants.h  htrie_structs.h  ipc.h  rec_array.h  recsll.h  trie_hybrid.h
src/: htrie_structs.c  ipc.c  main.c  rec_array.c  recsll.c  trie_hybrid.c
